Add cubic-bezier example to Plugin JS

--- a/docs/tokens/tokens.css
+++ b/docs/tokens/tokens.css
@@ -17,7 +17,7 @@
   --color-blue-70: #7598ff;
   --color-blue-80: #a1bcff;
   --color-blue-85: #b7cdff;
-  --color-blue-90: #cfdeff;
+  --color-blue-90: #cedeff;
   --color-blue-95: #e6efff;
   --color-gray-0: var(--color-black);
   --color-gray-10: #00040d;
@@ -100,44 +100,44 @@
 
 @supports (color: color(display-p3 1 1 1)) {
   :root {
-    --color-black: color(display-p3 0 0.098039 0.247059);
-    --color-blue-10: color(display-p3 0 0 0.105882);
-    --color-blue-15: color(display-p3 0.003922 0 0.207843);
-    --color-blue-20: color(display-p3 0.086275 0.086275 0.086275);
-    --color-blue-25: color(display-p3 0.007843 0 0.447059);
-    --color-blue-30: color(display-p3 0.035294 0 0.568627);
-    --color-blue-40: color(display-p3 0.094118 0.172549 0.72549);
-    --color-blue-50: color(display-p3 0.192157 0.309804 0.862745);
-    --color-blue-60: color(display-p3 0.305882 0.435294 1);
-    --color-blue-70: color(display-p3 0.458824 0.596078 1);
-    --color-blue-80: color(display-p3 0.631373 0.737255 1);
-    --color-blue-85: color(display-p3 0.717647 0.803922 1);
-    --color-blue-90: color(display-p3 0.811765 0.870588 1);
-    --color-blue-95: color(display-p3 0.901961 0.937255 1);
-    --color-gray-10: color(display-p3 0 0.015686 0.05098);
-    --color-gray-15: color(display-p3 0.015686 0.05098 0.094118);
-    --color-gray-20: color(display-p3 0.054902 0.094118 0.137255);
-    --color-gray-25: color(display-p3 0.101961 0.137255 0.184314);
-    --color-gray-30: color(display-p3 0.14902 0.184314 0.235294);
-    --color-gray-40: color(display-p3 0.254902 0.286275 0.337255);
-    --color-gray-50: color(display-p3 0.364706 0.392157 0.443137);
-    --color-gray-60: color(display-p3 0.478431 0.501961 0.552941);
-    --color-gray-70: color(display-p3 0.6 0.619608 0.666667);
-    --color-gray-80: color(display-p3 0.72549 0.745098 0.784314);
-    --color-gray-85: color(display-p3 0.788235 0.807843 0.847059);
-    --color-gray-90: color(display-p3 0.854902 0.870588 0.905882);
-    --color-gray-95: color(display-p3 0.921569 0.933333 0.968627);
-    --color-darkGray: color(display-p3 0.156863 0.164706 0.215686);
-    --color-green: color(display-p3 0.466667 0.803922 0.560784);
-    --color-purple: color(display-p3 0.415686 0.207843 0.85098);
-    --color-red: color(display-p3 0.964706 0.337255 0.415686);
+    --color-black: color(display-p3 0 0.09803921568627451 0.24705882352941178);
+    --color-blue-10: color(display-p3 0 0 0.10588235294117647);
+    --color-blue-15: color(display-p3 0.00392156862745098 0 0.20784313725490197);
+    --color-blue-20: color(display-p3 0.08627450980392157 0.08627450980392157 0.08627450980392157);
+    --color-blue-25: color(display-p3 0.00784313725490196 0 0.4470588235294118);
+    --color-blue-30: color(display-p3 0.03529411764705882 0 0.5686274509803921);
+    --color-blue-40: color(display-p3 0.09411764705882353 0.17254901960784313 0.7254901960784313);
+    --color-blue-50: color(display-p3 0.19215686274509805 0.30980392156862746 0.8627450980392157);
+    --color-blue-60: color(display-p3 0.3058823529411765 0.43529411764705883 1);
+    --color-blue-70: color(display-p3 0.4588235294117647 0.596078431372549 1);
+    --color-blue-80: color(display-p3 0.6313725490196078 0.7372549019607844 1);
+    --color-blue-85: color(display-p3 0.7176470588235294 0.803921568627451 1);
+    --color-blue-90: color(display-p3 0.807843137254902 0.8705882352941177 1);
+    --color-blue-95: color(display-p3 0.9019607843137255 0.9372549019607843 1);
+    --color-gray-10: color(display-p3 0 0.01568627450980392 0.050980392156862744);
+    --color-gray-15: color(display-p3 0.01568627450980392 0.050980392156862744 0.09411764705882353);
+    --color-gray-20: color(display-p3 0.054901960784313725 0.09411764705882353 0.13725490196078433);
+    --color-gray-25: color(display-p3 0.10196078431372549 0.13725490196078433 0.1843137254901961);
+    --color-gray-30: color(display-p3 0.14901960784313725 0.1843137254901961 0.23529411764705882);
+    --color-gray-40: color(display-p3 0.2549019607843137 0.28627450980392155 0.33725490196078434);
+    --color-gray-50: color(display-p3 0.36470588235294116 0.39215686274509803 0.44313725490196076);
+    --color-gray-60: color(display-p3 0.47843137254901963 0.5019607843137255 0.5529411764705883);
+    --color-gray-70: color(display-p3 0.6 0.6196078431372549 0.6666666666666666);
+    --color-gray-80: color(display-p3 0.7254901960784313 0.7450980392156863 0.7843137254901961);
+    --color-gray-85: color(display-p3 0.788235294117647 0.807843137254902 0.8470588235294118);
+    --color-gray-90: color(display-p3 0.8549019607843137 0.8705882352941177 0.9058823529411765);
+    --color-gray-95: color(display-p3 0.9215686274509803 0.9333333333333333 0.9686274509803922);
+    --color-darkGray: color(display-p3 0.1568627450980392 0.16470588235294117 0.21568627450980393);
+    --color-green: color(display-p3 0.4666666666666667 0.803921568627451 0.5607843137254902);
+    --color-purple: color(display-p3 0.41568627450980394 0.20784313725490197 0.8509803921568627);
+    --color-red: color(display-p3 0.9647058823529412 0.33725490196078434 0.41568627450980394);
     --color-white: color(display-p3 1 1 1);
-    --color-code-bg-greenShift: color(display-p3 0.168627 0.368627 0.666667);
-    --color-code-gold: color(display-p3 1 0.862745 0.168627);
-    --color-code-green: color(display-p3 0.47451 1 0.415686);
-    --color-code-orange: color(display-p3 1 0.392157 0.094118);
-    --color-code-red: color(display-p3 0.960784 0.427451 0.396078);
-    --color-code-pink: color(display-p3 1 0.352941 0.886275);
-    --color-code-skyBlue: color(display-p3 0.34902 0.756863 1);
+    --color-code-bg-greenShift: color(display-p3 0.16862745098039217 0.3686274509803922 0.6666666666666666);
+    --color-code-gold: color(display-p3 1 0.8627450980392157 0.16862745098039217);
+    --color-code-green: color(display-p3 0.4745098039215686 1 0.41568627450980394);
+    --color-code-orange: color(display-p3 1 0.39215686274509803 0.09411764705882353);
+    --color-code-red: color(display-p3 0.9607843137254902 0.42745098039215684 0.396078431372549);
+    --color-code-pink: color(display-p3 1 0.35294117647058826 0.8862745098039215);
+    --color-code-skyBlue: color(display-p3 0.34901960784313724 0.7568627450980392 1);
   }
 }
