fix: broken links

--- a/docs/src/pages/docs/getting-started/index.astro
+++ b/docs/src/pages/docs/getting-started/index.astro
@@ -139,9 +139,9 @@ export default {
   <h3>Next steps</h3>
 
   <ul>
-    <li><a href="/docs/tokens)">Learn about tokens</a></li>
-    <li><a href="/docs/guides/tokens-studio)">Sync with Figma using Tokens Studio</a></li>
-    <li><a href="/docs/reference/config)">Learn how to configure Cobalt</a></li>
-    <li><a href="/docs/plugins)">Add plugins</a></li>
+    <li><a href="/docs/tokens">Learn about tokens</a></li>
+    <li><a href="/docs/guides/tokens-studio">Sync with Figma using Tokens Studio</a></li>
+    <li><a href="/docs/reference/config">Learn how to configure Cobalt</a></li>
+    <li><a href="/docs/plugins">Add plugins</a></li>
   </ul>
 </Layout>
