Fix typo in modes guide

--- a/packages/plugin-css/test/border/want.css
+++ b/packages/plugin-css/test/border/want.css
@@ -10,14 +10,26 @@
   --ds-border-gray: 1px solid var(--ds-color-gray);
 }
 
+@media (prefers-color-scheme: light) {
+  :root {
+    --ds-color-gray: #544741;
+    --ds-border: 1px solid #0d0300;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --ds-color-gray: #bbb6b3;
+    --ds-border: 1px solid #ffffff;
+  }
+}
+
 [data-color-theme="light"] {
   --ds-color-gray: #544741;
-  --ds-border: 1px solid #0d0300;
 }
 
 [data-color-theme="dark"] {
   --ds-color-gray: #bbb6b3;
-  --ds-border: 1px solid #ffffff;
 }
 
 @supports (color: color(display-p3 1 1 1)) {
@@ -26,13 +38,25 @@
     --ds-border: 1px solid color(display-p3 0.050980392156862744 0.011764705882352941 0);
   }
 
+  @media (prefers-color-scheme: light) {
+    :root {
+      --ds-color-gray: color(display-p3 0.32941176470588235 0.2784313725490196 0.2549019607843137);
+      --ds-border: 1px solid color(display-p3 0.050980392156862744 0.011764705882352941 0);
+    }
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --ds-color-gray: color(display-p3 0.7333333333333333 0.7137254901960784 0.7019607843137254);
+      --ds-border: 1px solid color(display-p3 1 1 1);
+    }
+  }
+
   [data-color-theme="light"] {
     --ds-color-gray: color(display-p3 0.32941176470588235 0.2784313725490196 0.2549019607843137);
-    --ds-border: 1px solid color(display-p3 0.050980392156862744 0.011764705882352941 0);
   }
 
   [data-color-theme="dark"] {
     --ds-color-gray: color(display-p3 0.7333333333333333 0.7137254901960784 0.7019607843137254);
-    --ds-border: 1px solid color(display-p3 1 1 1);
   }
 }
