--- a/docs/src/pages/docs/guides/modes.astro
+++ b/docs/src/pages/docs/guides/modes.astro
@@ -112,12 +112,12 @@ export default {
   plugins: [
     pluginCSS({
       modeSelectors: {
-        light: ['@media (prefers-color-scheme: light)', 'body[data-color-mode="light"]'],
-        lightHighContrast: ['@media (prefers-color-scheme: light) and (prefers-contrast: more)', 'body[data-color-mode="lightHighContrast"]'],
-        lightColorblind: ['body[data-color-mode="lightColorblind"]'],
-        dark: ['@media (prefers-color-scheme: dark)', 'body[data-color-mode="dark"]'],
-        darkHighContrast: ['@media (prefers-color-scheme: dark) and (prefers-contrast: more)', 'body[data-color-mode="darkHighContrast"]'],
-        darkColorblind: ['body[data-color-mode="darkColorblind"]'],
+        '#light': ['@media (prefers-color-scheme: light)', 'body[data-color-mode="light"]'],
+        '#lightHighContrast': ['@media (prefers-color-scheme: light) and (prefers-contrast: more)', 'body[data-color-mode="lightHighContrast"]'],
+        '#lightColorblind': ['body[data-color-mode="lightColorblind"]'],
+        '#dark': ['@media (prefers-color-scheme: dark)', 'body[data-color-mode="dark"]'],
+        '#darkHighContrast': ['@media (prefers-color-scheme: dark) and (prefers-contrast: more)', 'body[data-color-mode="darkHighContrast"]'],
+        '#darkColorblind': ['body[data-color-mode="darkColorblind"]'],
       },
     }),
   ],
