Clean up Getting Started docs

--- a/docs/src/pages/docs/tokens/index.astro
+++ b/docs/src/pages/docs/tokens/index.astro
@@ -75,7 +75,7 @@ const tokenDef = {
 }`}
   />
 
-  <h2 id="font">
+  <h2 id="fontFamily">
     <Token type="fontFamily" />
     Font Family
   </h2>
