--- a/examples/apple/tokens/tokens.css
+++ b/examples/apple/tokens/tokens.css
@@ -18,19 +18,40 @@
   --color-systemIndigo: #5856d6;
   --color-systemMint: #00c7be;
   --color-systemOrange: #ff9500;
-  --color-systemPurple: #af52de;
   --color-systemPink: #ff2d55;
+  --color-systemPurple: #af52de;
   --color-systemRed: #ff3b30;
   --color-systemTeal: #30b0c7;
   --color-systemYellow: #ffcc00;
-  --font-family-sfPro: "SF Pro";
-  --font-family-sfProRounded: "SF Pro Rounded";
+  --font-family-newYork: "New York";
   --font-family-sfCompact: "SF Compact";
   --font-family-sfMono: "SF Mono";
-  --font-family-newYork: "New York";
+  --font-family-sfPro: "SF Pro";
+  --font-family-sfProRounded: "SF Pro Rounded";
+  --font-style-body-font-size: 17px;
+  --font-style-body-font-weight: 400;
+  --font-style-body-line-height: 22px;
+  --font-style-callout-font-size: 16px;
+  --font-style-callout-font-weight: 400;
+  --font-style-callout-line-height: 21px;
+  --font-style-caption-2-font-size: 11px;
+  --font-style-caption-2-font-weight: 400;
+  --font-style-caption-2-line-height: 13px;
+  --font-style-caption1-font-size: 12px;
+  --font-style-caption1-font-weight: 400;
+  --font-style-caption1-line-height: 16px;
+  --font-style-footnote-font-size: 13px;
+  --font-style-footnote-font-weight: 400;
+  --font-style-footnote-line-height: 18px;
+  --font-style-headline-font-size: 17px;
+  --font-style-headline-font-weight: 600;
+  --font-style-headline-line-height: 22px;
   --font-style-largeTitle-font-size: 34px;
   --font-style-largeTitle-font-weight: 400;
   --font-style-largeTitle-line-height: 41px;
+  --font-style-subhead-font-size: 15px;
+  --font-style-subhead-font-weight: 400;
+  --font-style-subhead-line-height: 20px;
   --font-style-title1-font-size: 28px;
   --font-style-title1-font-weight: 400;
   --font-style-title1-line-height: 34px;
@@ -40,48 +61,27 @@
   --font-style-title3-font-size: 20px;
   --font-style-title3-font-weight: 400;
   --font-style-title3-line-height: 25px;
-  --font-style-headline-font-size: 17px;
-  --font-style-headline-font-weight: 600;
-  --font-style-headline-line-height: 22px;
-  --font-style-body-font-size: 17px;
-  --font-style-body-font-weight: 400;
-  --font-style-body-line-height: 22px;
-  --font-style-callout-font-size: 16px;
-  --font-style-callout-font-weight: 400;
-  --font-style-callout-line-height: 21px;
-  --font-style-subhead-font-size: 15px;
-  --font-style-subhead-font-weight: 400;
-  --font-style-subhead-line-height: 20px;
-  --font-style-footnote-font-size: 13px;
-  --font-style-footnote-font-weight: 400;
-  --font-style-footnote-line-height: 18px;
-  --font-style-caption1-font-size: 12px;
-  --font-style-caption1-font-weight: 400;
-  --font-style-caption1-line-height: 16px;
-  --font-style-caption-2-font-size: 11px;
-  --font-style-caption-2-font-weight: 400;
-  --font-style-caption-2-line-height: 13px;
 }
 
 @supports (color: color(display-p3 1 1 1)) {
   :root {
-    --color-systemBlue: color(display-p3 0 0.478431 1);
-    --color-systemBrown: color(display-p3 0.635294 0.517647 0.368627);
-    --color-systemCyan: color(display-p3 0.196078 0.678431 0.901961);
-    --color-systemGray: color(display-p3 0.556863 0.556863 0.576471);
-    --color-systemGray2: color(display-p3 0.682353 0.682353 0.698039);
-    --color-systemGray3: color(display-p3 0.780392 0.780392 0.8);
-    --color-systemGray4: color(display-p3 0.819608 0.819608 0.839216);
-    --color-systemGray5: color(display-p3 0.898039 0.898039 0.917647);
-    --color-systemGray6: color(display-p3 0.94902 0.94902 0.968627);
-    --color-systemGreen: color(display-p3 0.203922 0.780392 0.34902);
-    --color-systemIndigo: color(display-p3 0.345098 0.337255 0.839216);
-    --color-systemMint: color(display-p3 0 0.780392 0.745098);
-    --color-systemOrange: color(display-p3 1 0.584314 0);
-    --color-systemPurple: color(display-p3 0.686275 0.321569 0.870588);
-    --color-systemPink: color(display-p3 1 0.176471 0.333333);
-    --color-systemRed: color(display-p3 1 0.231373 0.188235);
-    --color-systemTeal: color(display-p3 0.188235 0.690196 0.780392);
+    --color-systemBlue: color(display-p3 0 0.47843137254901963 1);
+    --color-systemBrown: color(display-p3 0.6352941176470588 0.5176470588235295 0.3686274509803922);
+    --color-systemCyan: color(display-p3 0.19607843137254902 0.6784313725490196 0.9019607843137255);
+    --color-systemGray: color(display-p3 0.5568627450980392 0.5568627450980392 0.5764705882352941);
+    --color-systemGray2: color(display-p3 0.6823529411764706 0.6823529411764706 0.6980392156862745);
+    --color-systemGray3: color(display-p3 0.7803921568627451 0.7803921568627451 0.8);
+    --color-systemGray4: color(display-p3 0.8196078431372549 0.8196078431372549 0.8392156862745098);
+    --color-systemGray5: color(display-p3 0.8980392156862745 0.8980392156862745 0.9176470588235294);
+    --color-systemGray6: color(display-p3 0.9490196078431372 0.9490196078431372 0.9686274509803922);
+    --color-systemGreen: color(display-p3 0.20392156862745098 0.7803921568627451 0.34901960784313724);
+    --color-systemIndigo: color(display-p3 0.34509803921568627 0.33725490196078434 0.8392156862745098);
+    --color-systemMint: color(display-p3 0 0.7803921568627451 0.7450980392156863);
+    --color-systemOrange: color(display-p3 1 0.5843137254901961 0);
+    --color-systemPink: color(display-p3 1 0.17647058823529413 0.3333333333333333);
+    --color-systemPurple: color(display-p3 0.6862745098039216 0.3215686274509804 0.8705882352941177);
+    --color-systemRed: color(display-p3 1 0.23137254901960785 0.18823529411764706);
+    --color-systemTeal: color(display-p3 0.18823529411764706 0.6901960784313725 0.7803921568627451);
     --color-systemYellow: color(display-p3 1 0.8 0);
   }
 }
