--- a/examples/shopify/tokens/tokens.css
+++ b/examples/shopify/tokens/tokens.css
@@ -6,133 +6,133 @@
 
 :root {
   --color-black: #000000;
-  --color-blueLighter: #ebf5fa;
-  --color-blueLight: #b4e1fa;
   --color-blue: #006fbb;
   --color-blueDark: #084e8a;
   --color-blueDarker: #001429;
+  --color-blueLight: #b4e1fa;
+  --color-blueLighter: #ebf5fa;
   --color-blueText: #3e4e57;
-  --color-greenLighter: #e3f1df;
-  --color-greenLight: #bbe5b3;
   --color-green: #50b83c;
   --color-greenDark: #108043;
   --color-greenDarker: #173630;
+  --color-greenLight: #bbe5b3;
+  --color-greenLighter: #e3f1df;
   --color-greenText: #414f3e;
-  --color-indigoLighter: #f4f5fa;
-  --color-indigoLight: #b3bcf5;
   --color-indigo: #5c6ac4;
   --color-indigoDark: #202e78;
   --color-indigoDarker: #000639;
+  --color-indigoLight: #b3bcf5;
+  --color-indigoLighter: #f4f5fa;
   --color-indigoText: #3e4155;
-  --color-inkLightest: #919eab;
-  --color-inkLighter: #637381;
-  --color-inkLight: #454f5b;
   --color-ink: #212b36;
-  --color-orangeLighter: #fcebdb;
-  --color-orangeLight: #ffc58b;
+  --color-inkLight: #454f5b;
+  --color-inkLighter: #637381;
+  --color-inkLightest: #919eab;
   --color-orange: #f49342;
   --color-orangeDark: #c05717;
   --color-orangeDarker: #4a1504;
+  --color-orangeLight: #ffc58b;
+  --color-orangeLighter: #fcebdb;
   --color-orangeText: #594430;
-  --color-purpleLighter: #f6f0fd;
-  --color-purpleLight: #e3d0ff;
   --color-purple: #9c6ade;
   --color-purpleDark: #50248f;
   --color-purpleDarker: #230051;
+  --color-purpleLight: #e3d0ff;
+  --color-purpleLighter: #f6f0fd;
   --color-purpleText: #50495a;
-  --color-redLighter: #fbeae5;
-  --color-redLight: #fead9a;
   --color-red: #de3618;
   --color-redDark: #bf0711;
   --color-redDarker: #330101;
+  --color-redLight: #fead9a;
+  --color-redLighter: #fbeae5;
   --color-redText: #583c35;
-  --color-skyLighter: #f9fafb;
-  --color-skyLight: #f4f6f8;
   --color-sky: #dfe3e8;
   --color-skyDark: #c4cdd5;
-  --color-tealLighter: #e0f5f5;
-  --color-tealLight: #b7ecec;
+  --color-skyLight: #f4f6f8;
+  --color-skyLighter: #f9fafb;
   --color-teal: #47c1bf;
   --color-tealDark: #00848e;
   --color-tealDarker: #003135;
+  --color-tealLight: #b7ecec;
+  --color-tealLighter: #e0f5f5;
   --color-tealText: #405352;
   --color-white: #ffffff;
-  --color-yellowLighter: #fcf1cd;
-  --color-yellowLight: #ffea8a;
   --color-yellow: #eec200;
   --color-yellowDark: #8a6116;
   --color-yellowDarker: #573b00;
+  --color-yellowLight: #ffea8a;
+  --color-yellowLighter: #fcf1cd;
   --color-yellowText: #595130;
   --font-family-base: -apple-system, BlinkMacSystemFont, "San Francisco", "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
   --font-family-mono: Monaco, Consolas, "Lucida Console", monospace;
-  --space-none: 0;
-  --space-extraTight: 4px;
-  --space-tight: 8px;
-  --space-baseTight: 12px;
   --space-base: 16px;
-  --space-loose: 20px;
+  --space-baseTight: 12px;
   --space-extraLoose: 32px;
+  --space-extraTight: 4px;
+  --space-loose: 20px;
+  --space-none: 0;
+  --space-tight: 8px;
 }
 
 @supports (color: color(display-p3 1 1 1)) {
   :root {
     --color-black: color(display-p3 0 0 0);
-    --color-blueLighter: color(display-p3 0.921569 0.960784 0.980392);
-    --color-blueLight: color(display-p3 0.705882 0.882353 0.980392);
-    --color-blue: color(display-p3 0 0.435294 0.733333);
-    --color-blueDark: color(display-p3 0.031373 0.305882 0.541176);
-    --color-blueDarker: color(display-p3 0 0.078431 0.160784);
-    --color-blueText: color(display-p3 0.243137 0.305882 0.341176);
-    --color-greenLighter: color(display-p3 0.890196 0.945098 0.87451);
-    --color-greenLight: color(display-p3 0.733333 0.898039 0.701961);
-    --color-green: color(display-p3 0.313725 0.721569 0.235294);
-    --color-greenDark: color(display-p3 0.062745 0.501961 0.262745);
-    --color-greenDarker: color(display-p3 0.090196 0.211765 0.188235);
-    --color-greenText: color(display-p3 0.254902 0.309804 0.243137);
-    --color-indigoLighter: color(display-p3 0.956863 0.960784 0.980392);
-    --color-indigoLight: color(display-p3 0.701961 0.737255 0.960784);
-    --color-indigo: color(display-p3 0.360784 0.415686 0.768627);
-    --color-indigoDark: color(display-p3 0.12549 0.180392 0.470588);
-    --color-indigoDarker: color(display-p3 0 0.023529 0.223529);
-    --color-indigoText: color(display-p3 0.243137 0.254902 0.333333);
-    --color-inkLightest: color(display-p3 0.568627 0.619608 0.670588);
-    --color-inkLighter: color(display-p3 0.388235 0.45098 0.505882);
-    --color-inkLight: color(display-p3 0.270588 0.309804 0.356863);
-    --color-ink: color(display-p3 0.129412 0.168627 0.211765);
-    --color-orangeLighter: color(display-p3 0.988235 0.921569 0.858824);
-    --color-orangeLight: color(display-p3 1 0.772549 0.545098);
-    --color-orange: color(display-p3 0.956863 0.576471 0.258824);
-    --color-orangeDark: color(display-p3 0.752941 0.341176 0.090196);
-    --color-orangeDarker: color(display-p3 0.290196 0.082353 0.015686);
-    --color-orangeText: color(display-p3 0.34902 0.266667 0.188235);
-    --color-purpleLighter: color(display-p3 0.964706 0.941176 0.992157);
-    --color-purpleLight: color(display-p3 0.890196 0.815686 1);
-    --color-purple: color(display-p3 0.611765 0.415686 0.870588);
-    --color-purpleDark: color(display-p3 0.313725 0.141176 0.560784);
-    --color-purpleDarker: color(display-p3 0.137255 0 0.317647);
-    --color-purpleText: color(display-p3 0.313725 0.286275 0.352941);
-    --color-redLighter: color(display-p3 0.984314 0.917647 0.898039);
-    --color-redLight: color(display-p3 0.996078 0.678431 0.603922);
-    --color-red: color(display-p3 0.870588 0.211765 0.094118);
-    --color-redDark: color(display-p3 0.74902 0.027451 0.066667);
-    --color-redDarker: color(display-p3 0.2 0.003922 0.003922);
-    --color-redText: color(display-p3 0.345098 0.235294 0.207843);
-    --color-skyLighter: color(display-p3 0.976471 0.980392 0.984314);
-    --color-skyLight: color(display-p3 0.956863 0.964706 0.972549);
-    --color-sky: color(display-p3 0.87451 0.890196 0.909804);
-    --color-skyDark: color(display-p3 0.768627 0.803922 0.835294);
-    --color-tealLighter: color(display-p3 0.878431 0.960784 0.960784);
-    --color-tealLight: color(display-p3 0.717647 0.92549 0.92549);
-    --color-teal: color(display-p3 0.278431 0.756863 0.74902);
-    --color-tealDark: color(display-p3 0 0.517647 0.556863);
-    --color-tealDarker: color(display-p3 0 0.192157 0.207843);
-    --color-tealText: color(display-p3 0.25098 0.32549 0.321569);
+    --color-blue: color(display-p3 0 0.43529411764705883 0.7333333333333333);
+    --color-blueDark: color(display-p3 0.03137254901960784 0.3058823529411765 0.5411764705882353);
+    --color-blueDarker: color(display-p3 0 0.0784313725490196 0.1607843137254902);
+    --color-blueLight: color(display-p3 0.7058823529411765 0.8823529411764706 0.9803921568627451);
+    --color-blueLighter: color(display-p3 0.9215686274509803 0.9607843137254902 0.9803921568627451);
+    --color-blueText: color(display-p3 0.24313725490196078 0.3058823529411765 0.3411764705882353);
+    --color-green: color(display-p3 0.3137254901960784 0.7215686274509804 0.23529411764705882);
+    --color-greenDark: color(display-p3 0.06274509803921569 0.5019607843137255 0.2627450980392157);
+    --color-greenDarker: color(display-p3 0.09019607843137255 0.21176470588235294 0.18823529411764706);
+    --color-greenLight: color(display-p3 0.7333333333333333 0.8980392156862745 0.7019607843137254);
+    --color-greenLighter: color(display-p3 0.8901960784313725 0.9450980392156862 0.8745098039215686);
+    --color-greenText: color(display-p3 0.2549019607843137 0.30980392156862746 0.24313725490196078);
+    --color-indigo: color(display-p3 0.3607843137254902 0.41568627450980394 0.7686274509803922);
+    --color-indigoDark: color(display-p3 0.12549019607843137 0.1803921568627451 0.47058823529411764);
+    --color-indigoDarker: color(display-p3 0 0.023529411764705882 0.2235294117647059);
+    --color-indigoLight: color(display-p3 0.7019607843137254 0.7372549019607844 0.9607843137254902);
+    --color-indigoLighter: color(display-p3 0.9568627450980393 0.9607843137254902 0.9803921568627451);
+    --color-indigoText: color(display-p3 0.24313725490196078 0.2549019607843137 0.3333333333333333);
+    --color-ink: color(display-p3 0.12941176470588237 0.16862745098039217 0.21176470588235294);
+    --color-inkLight: color(display-p3 0.27058823529411763 0.30980392156862746 0.3568627450980392);
+    --color-inkLighter: color(display-p3 0.38823529411764707 0.45098039215686275 0.5058823529411764);
+    --color-inkLightest: color(display-p3 0.5686274509803921 0.6196078431372549 0.6705882352941176);
+    --color-orange: color(display-p3 0.9568627450980393 0.5764705882352941 0.25882352941176473);
+    --color-orangeDark: color(display-p3 0.7529411764705882 0.3411764705882353 0.09019607843137255);
+    --color-orangeDarker: color(display-p3 0.2901960784313726 0.08235294117647059 0.01568627450980392);
+    --color-orangeLight: color(display-p3 1 0.7725490196078432 0.5450980392156862);
+    --color-orangeLighter: color(display-p3 0.9882352941176471 0.9215686274509803 0.8588235294117647);
+    --color-orangeText: color(display-p3 0.34901960784313724 0.26666666666666666 0.18823529411764706);
+    --color-purple: color(display-p3 0.611764705882353 0.41568627450980394 0.8705882352941177);
+    --color-purpleDark: color(display-p3 0.3137254901960784 0.1411764705882353 0.5607843137254902);
+    --color-purpleDarker: color(display-p3 0.13725490196078433 0 0.3176470588235294);
+    --color-purpleLight: color(display-p3 0.8901960784313725 0.8156862745098039 1);
+    --color-purpleLighter: color(display-p3 0.9647058823529412 0.9411764705882353 0.9921568627450981);
+    --color-purpleText: color(display-p3 0.3137254901960784 0.28627450980392155 0.35294117647058826);
+    --color-red: color(display-p3 0.8705882352941177 0.21176470588235294 0.09411764705882353);
+    --color-redDark: color(display-p3 0.7490196078431373 0.027450980392156862 0.06666666666666667);
+    --color-redDarker: color(display-p3 0.2 0.00392156862745098 0.00392156862745098);
+    --color-redLight: color(display-p3 0.996078431372549 0.6784313725490196 0.6039215686274509);
+    --color-redLighter: color(display-p3 0.984313725490196 0.9176470588235294 0.8980392156862745);
+    --color-redText: color(display-p3 0.34509803921568627 0.23529411764705882 0.20784313725490197);
+    --color-sky: color(display-p3 0.8745098039215686 0.8901960784313725 0.9098039215686274);
+    --color-skyDark: color(display-p3 0.7686274509803922 0.803921568627451 0.8352941176470589);
+    --color-skyLight: color(display-p3 0.9568627450980393 0.9647058823529412 0.9725490196078431);
+    --color-skyLighter: color(display-p3 0.9764705882352941 0.9803921568627451 0.984313725490196);
+    --color-teal: color(display-p3 0.2784313725490196 0.7568627450980392 0.7490196078431373);
+    --color-tealDark: color(display-p3 0 0.5176470588235295 0.5568627450980392);
+    --color-tealDarker: color(display-p3 0 0.19215686274509805 0.20784313725490197);
+    --color-tealLight: color(display-p3 0.7176470588235294 0.9254901960784314 0.9254901960784314);
+    --color-tealLighter: color(display-p3 0.8784313725490196 0.9607843137254902 0.9607843137254902);
+    --color-tealText: color(display-p3 0.25098039215686274 0.3254901960784314 0.3215686274509804);
     --color-white: color(display-p3 1 1 1);
-    --color-yellowLighter: color(display-p3 0.988235 0.945098 0.803922);
-    --color-yellowLight: color(display-p3 1 0.917647 0.541176);
-    --color-yellow: color(display-p3 0.933333 0.760784 0);
-    --color-yellowDark: color(display-p3 0.541176 0.380392 0.086275);
-    --color-yellowDarker: color(display-p3 0.341176 0.231373 0);
-    --color-yellowText: color(display-p3 0.34902 0.317647 0.188235);
+    --color-yellow: color(display-p3 0.9333333333333333 0.7607843137254902 0);
+    --color-yellowDark: color(display-p3 0.5411764705882353 0.3803921568627451 0.08627450980392157);
+    --color-yellowDarker: color(display-p3 0.3411764705882353 0.23137254901960785 0);
+    --color-yellowLight: color(display-p3 1 0.9176470588235294 0.5411764705882353);
+    --color-yellowLighter: color(display-p3 0.9882352941176471 0.9450980392156862 0.803921568627451);
+    --color-yellowText: color(display-p3 0.34901960784313724 0.3176470588235294 0.18823529411764706);
   }
 }
