--- a/packages/plugin-sass/test/basic/want.sass
+++ b/packages/plugin-sass/test/basic/want.sass
@@ -42,7 +42,16 @@ $__token-values: (
   "gradient.g-b": (
     default: (#00ff00 0%, #0000ff 100%),
   ),
-  "shadow": (
+  "shadow.base": (
+    default: (0 4px 8px 0 #0000001a),
+  ),
+  "shadow.inset": (
+    default: (inset 0 4px 8px 0 #00000026),
+  ),
+  "shadow.layered": (
+    default: (0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f),
+  ),
+  "shadow.simple": (
     default: (0 4px 8px 0 #0000001a),
   ),
   "timing.deliberate": (
