--- a/docs/src/pages/docs/tokens/index.astro
+++ b/docs/src/pages/docs/tokens/index.astro
@@ -26,7 +26,9 @@ const tokenDef = {
   <h1>Tokens</h1>
 
   <p>
-    Tokens are defined via the <a href="https://design-tokens.github.io/community-group/format/" target="_blank">the W3C Design Tokens format</a> schema (Apr 2023). Cobalt supports 100% of the spec, but with the following changes:
+    Tokens are defined via the <a href="https://design-tokens.github.io/community-group/format/" target="_blank">the W3C Design Tokens format</a> schema (Apr 2023). You’ll save your tokens in a <code>tokens.yaml</code> or <code
+      >tokens.json</code
+    > file in the root of your project. Cobalt supports 100% of the spec, but with the following changes:
   </p>
 
   <ul>
